Update and rename contact_Version2.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
         
         <!-- Contact Information -->
         <ul class="contact-list">
-            <li>Email: wannxd@example.com</li>
-            <li>Phone: +123-456-7890</li>
-            <li>Social Media: Links below</li>
+            <li>Email: wannxdamprem@example.com</li>
+            <li>Phone: +6285655834179</li>
+            <li>Social Media: - </li>
         </ul>
         
         <a href="index.html" class="btn secondary">Back to Home</a>
